# rl-trading-ex

./: .gitignore  Dockerfile  LICENSE  README.md  parameters.yml  params.yml  pyproject.toml
data/: test.csv  train.csv
notebooks/: train.ipynb
rl_trading_ex/: common.py  data.py  ddpg.py  ddqn.py  envs.py  main.py
src/: agent_ddpg.py  agent_ddqn.py  common.py  data.py  env_port.py  env_stock.py  main.py  utils.py
tests/: envs.py
tex/: RL_trading_report.aux  RL_trading_report.fdb_latexmk  RL_trading_report.fls  RL_trading_report.tex  test.aux  test.fdb_latexmk  test.fls
