[tool.poetry]
name = "rl_trading"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
torch = "1.8.1"
gym = "^0.20.0"
ipykernel = "^6.4.1"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
pandas = "^1.3.3"
pandas-ta = "^0.3.14-beta.0"
ray = {extras = ["tune"], version = "^1.6.0"}
scikit-learn = "^0.24.2"
wandb = "^0.12.2"
stable-baselines3 = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
MonkeyType = "^21.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
