[tool.poetry]
name = "rl-trading-ex"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.8"
torch = "^1.9.1"
gym = "^0.20.0"
stable-baselines3 = "^1.2.0"
pandas = "^1.3.3"
pandas-ta = "^0.3.14-beta.0"
numpy = "^1.21.2"
scipy = "^1.7.1"
scikit-learn = "^1.0"
matplotlib = "^3.4.3"
ray = {extras = ["tune"], version = "^1.6.0"}
wandb = "^0.12.2"
ipykernel = "^6.4.1"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"
mypy = "^0.910"
MonkeyType = "^21.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
